validating-admission-policy/cluster-labels-vap-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "cluster-labels-vap-binding.example.com"
spec:
  policyName: "cluster-labels-vap.example.com"
  validationActions: [Deny]
