validating-admission-policy/vks-actual-vap-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingAdmissionPolicyBinding","metadata":{"annotations":{},"labels":{"managedBy":"vSphere-AppPlatform"},"name":"appplatform-pinniped-policy-binding"},"spec":{"paramRef":{"name":"admission-policy-config","namespace":"vmware-system-appplatform-operator-system","parameterNotFoundAction":"Deny"},"policyName":"appplatform-pinniped-policy","validationActions":["Deny"]}}
  creationTimestamp: "2026-05-05T08:31:54Z"
  generation: 1
  labels:
    managedBy: vSphere-AppPlatform
  name: appplatform-pinniped-policy-binding
  resourceVersion: "3699"
  uid: e6f2f5b2-3dd0-4c02-91b3-1b56864b512d
spec:
  paramRef:
    name: admission-policy-config
    namespace: vmware-system-appplatform-operator-system
    parameterNotFoundAction: Deny
  policyName: appplatform-pinniped-policy
  validationActions:
  - Deny
